[package]
name = "piped_playlist_importer"
version = "0.1.0"
edition = "2021"
authors = ["Mageas <dev@mageas.net>"]
description = "Import playlist to Piped from text files"
keywords = ["piped"]
license = "GPL-3.0"
repository = "https://gitea.heartnerds.org/Mageas/piped_playlist_importer"

[dependencies]
thiserror = "1.0.37"
anyhow = "1.0.66"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
